--- a/src/css/components.css
+++ b/src/css/components.css
@@ -888,7 +888,7 @@
     margin-left: auto;
   }
   #main {
-    top: 100px;
+    top: 40px;
     padding: 16px;
   }
   .brand-sub {
